# RestrictedIDE-V2

./: .gitignore  PROJECT_DOCUMENTATION.md  package-lock.json  package.json
src/: admin.js  app.js  code-runner.js  editor.js  file-tree.js  index.html  search.js  session-create.js  session-dashboard.js  session-join.js  session-list.js  session-post.js  session-question.js  session-submit.js  session-timer.js  session.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  logger.rs  main.rs
src-tauri/src/commands/: admin_commands.rs  code_execution.rs  fs_commands.rs  mod.rs  policy_commands.rs  post_session_commands.rs  security_commands.rs  session_commands.rs  system_commands.rs
src-tauri/src/policy/: engine.rs  file_access_rule.rs  keyboard_rule.rs  mod.rs  process_rule.rs  time_rule.rs  url_rule.rs
src-tauri/src/runtime/: session.rs
src-tauri/src/security/: clipboard_guard.rs  focus_watchdog.rs  keyboard_hook.rs  mod.rs  monitor_detection.rs  mouse_confinement.rs  process_monitor.rs  screenshot_guard.rs  vm_detection.rs
src-tauri/src/session/: db.rs  lan_server.rs  mod.rs  models.rs  transport.rs
