[package]
name = "restricted-ide"
version = "0.1.0"
edition = "2021"
description = "Secure OS-Level Restricted IDE with Policy-Driven Kiosk Enforcement"

[lib]
name = "restricted_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
regex = "1"
dirs = "6"
sysinfo = "0.33"
once_cell = "1"
walkdir = "2"
fern = "0.7.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
